fixed selezione checkbox quando aggiorni la pagina rimane invariato, colore text reset nero, gap tra il chekbox e la scritta fatto

--- a/venerdiHome.css
+++ b/venerdiHome.css
@@ -48,6 +48,7 @@ label {
   padding: 20px;
   font-size: 20px;
   cursor: pointer;
+  gap: 5px;
 }
 .exercise-checkbox {
   transform: scale(1.5);
